--- a/youtubeclone/styles/video.css
+++ b/youtubeclone/styles/video.css
@@ -36,6 +36,7 @@
 
         .thumbnail-row{
             margin-bottom: 12px;
+            position: relative;
         }
 
         .video-author,.video-stats{
@@ -54,3 +55,18 @@
             row-gap:40px
         }
       
+        .video-time{
+            font-family: Roboto,Arial;
+            font-size: 12px;
+            font-weight: 500px;
+            background-color: black;
+            color: white;
+            position : absolute;
+            bottom: 8px;
+            right:5px;
+            padding-left:4px;
+            padding-right:4px;
+            padding-top: 4px;
+            padding-bottom:4px;
+            border-radius:2px;
+        }
