--- a/youtubeclone/styles/header.css
+++ b/youtubeclone/styles/header.css
@@ -122,6 +122,30 @@
     height: 24px;
 }
 
+.notifications-icon-container{
+    position:relative;
+    
+}
+
+.notifications-count{
+    position: absolute;
+    top:-2px;
+    right:-5px;
+    background-color: rgb(204, 19, 19);
+    color:white;
+    font-family: Roboto, arial;
+    font-size:11px;
+    padding-left:5px;
+    padding-right: 5px;
+    padding-top:1px;
+    padding-bottom: 2px;
+    border-radius: 50%;
+    border: solid;
+    border-width: 1px;
+    
+   
+}
+
 .current-user-picture{
     height: 33px;
     width: 33px;
